update:added emoji and stuff

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,3 +1,8 @@
+::selection {
+  background:#c5fcfc;
+  /* color: #ff0000; */
+}
+
 .wave {
    animation-name: wave-animation;  /* Refers to the name of your @keyframes element below */
    animation-duration: 2.5s;        /* Change to speed up or slow down */
