--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -12,6 +12,10 @@
     auto;
 }
 
+.overlay{
+  display: none;
+}
+
 .myname:hover {
   -webkit-animation: colorchange 5s infinite alternate,
     cursorshuffle 2s infinite alternate;
@@ -84,4 +88,23 @@
         16 0,
       auto;
   }
+}
+
+@media screen and (max-width: 1200px ) {
+  .overlay {
+    display: block;
+    position: fixed;
+    z-index: 1000;
+    background-color: white;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    scroll-behavior: unset;
+    overflow: hidden;
+    padding-top: 45vh;
+    align-items: center;
+    text-align: center;
+    font-weight: 800;
+  }
+  
 }
