--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,19 +1,38 @@
 @import "./../../utils/wave.css";
 
-.projects{
-   scroll-snap-stop: always;
+.projects {
+  scroll-snap-stop: always;
 }
 .neu {
   border-radius: 1.9em;
   background: #ffffff;
   box-shadow: 1.3em 1.3em 3.1em #cccccc, -1.3em -1.3em 3.1em #ffffff;
+  padding-top: 1.3em;
+  padding-left: 1.3em;
 }
-.neu:hover {
+
+.project-details {
+  margin-left: 3.5em;
+  margin-top: 1.3em;
+  padding-right: 5em;
+}
+
+.project-description {
+  word-wrap: normal;
+}
+
+.project-image{
+  box-shadow: 1.3em 1.3em 3.1em #cccccc, -1.3em -1.3em 3.1em #ffffff;
+}
+/* .neu:hover {
   border-radius: 1.9em;
   background: #ffffff;
   box-shadow: inset 1.3em 1.3em 3.1em  #cccccc, inset -1.3em -1.3em 3.1em #ffffff;
-}
-a, a:visited, a:hover, a:active {
+} */
+a,
+a:visited,
+a:hover,
+a:active {
   color: inherit;
   text-decoration: none;
 }
