--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -12,6 +12,12 @@
     auto;
 }
 
+a:hover{
+  cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='44' height='53' viewport='0 0 100 100' style='fill:black;font-size:26px;'><text y='50%'>👆</text></svg>")
+      16 0,
+    auto;
+}
+
 .overlay{
   display: none;
 }
